--- a/templates/pricecheck/index.html
+++ b/templates/pricecheck/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     <meta charset="UTF-8">
-    <title>Price check</title>
+    <title>Automated Melanoma Tester</title>
 <style>
         /*
         ul {
@@ -163,12 +163,27 @@
         <br><br>
         <h1 class="header center " id="b">Melanoma Detector</h1>
         <div class="row center">
-          <h5 class="header col s12 bold black-text">Melanoma skin lesion detector for everyone!</h5>
-        </div>
-        <div class="row center">
-          <a href="{% url 'results' %}" class="btn-large waves-effect waves-light grey">Get Started</a>
+          <h5 class="header col s12 bold white-text">Melanoma skin lesion detector for everyone!</h5>
         </div>
         <br><br>
+          {% block content %}
+  <form method="post" action="{% url 'results' %}" enctype="multipart/form-data">
+    {% csrf_token %}
+      <div class="file-field input-field">
+      <div class="btn">
+        <span>File</span>
+        <input type="file" name="myfile">
+      </div>
+      <div class="file-path-wrapper">
+        <input class="file-path validate" type="text">
+      </div>
+    </div>
+       <button onclick="M.toast({html: 'Uploaded! Please wait for the results'})" class="btn waves-effect waves-light" type="submit" name="action">Upload
+    <i class="material-icons right">send</i>
+  </button>
+  </form>
+
+{% endblock %}
 
       </div>
     </div>
