--- a/templates/pricecheck/results.html
+++ b/templates/pricecheck/results.html
@@ -145,6 +145,8 @@
     </script>
 </head>
 <body>
+
+
 <div class="darken-4 hello">
 <div class="navbar-fixed">
 <nav>
@@ -163,14 +165,29 @@
           <h5 class="header col s12 bold black-text">Melanoma skin lesion detector for everyone!</h5>
         </div>
         <br><br>
-          {% block content %}
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" name="myfile">
-    <button type="submit">Upload</button>
-  </form>
+         <div class="row">
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img src="media/test.jpg">
+          <span class="card-title">Card Title</span>
+        </div>
+        <div class="card-content">
+            {% if predi == 1 %}
+          <p>The image has been checked and found to be Melanomic</p>
+            {% endif %}
+        {% if predi == 0 %}
+          <p>The image has been checked and found to be Nevus</p>
+            {% endif %}
 
-{% endblock %}
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
       </div>
