--- a/templates/pricecheck/results.html
+++ b/templates/pricecheck/results.html
@@ -142,6 +142,13 @@
   m.style.display="none";
 }
 }
+
+
+$(document).ready(function(){
+    // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
+    $('.modal').modal();
+  });
+
     </script>
 </head>
 <body>
@@ -166,10 +173,16 @@
         </div>
         <br><br>
          <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
-        <div class="card-image">
-          <img src="media/test.jpg">
+
+
+          <!-- Modal Trigger -->
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p><img src="media/test.jpg">
           <span class="card-title">Card Title</span>
         </div>
         <div class="card-content">
@@ -179,13 +192,15 @@
         {% if predi == 0 %}
           <p>The image has been checked and found to be Nevus</p>
             {% endif %}
-
-        </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-        </div>
-      </div>
+            </p>
     </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
+
+
+
   </div>
 
 
