--- a/templates/pricecheck/index.html
+++ b/templates/pricecheck/index.html
@@ -167,7 +167,7 @@
         </div>
         <br><br>
           {% block content %}
-  <form method="post" action="{% url 'results' %}" enctype="multipart/form-data">
+  <form method="post" action="#" enctype="multipart/form-data">
     {% csrf_token %}
       <div class="file-field input-field">
       <div class="btn">
@@ -183,7 +183,15 @@
   </button>
   </form>
 
+
 {% endblock %}
+      {% if saved %}
+         <strong>Your profile was saved.</strong>
+      {% endif %}
+
+      {% if not saved %}
+         <strong>Your profile was not saved.</strong>
+      {% endif %}
 
       </div>
     </div>
