--- a/templates/pricecheck/index.html
+++ b/templates/pricecheck/index.html
@@ -183,6 +183,9 @@
   </button>
   </form>
 
+   <a class="waves-effect waves-light btn" href={% url 'results' %}><i class="material-icons left">cloud</i>button</a>
+
+
 
 {% endblock %}
 
