--- a/templates/pricecheck/index.html
+++ b/templates/pricecheck/index.html
@@ -183,7 +183,7 @@
   </button>
   </form>
 
-   <a class="waves-effect waves-light btn" href={% url 'results' %}><i class="material-icons left">cloud</i>button</a>
+   <a class="waves-effect waves-light btn" href="{% url 'results' %}"><i class="material-icons left">cloud</i>button</a>
 
 
 
