--- a/templates/pricecheck/results.html
+++ b/templates/pricecheck/results.html
@@ -183,7 +183,7 @@ $(document).ready(function(){
     <div class="modal-content">
       <h4>Modal Header</h4>
       <p><img src="media/test.jpg">
-          <span class="card-title">Card Title</span>
+          <span class="card-title">Prediction Results</span>
         </div>
         <div class="card-content">
             {% if predi == 1 %}
@@ -195,7 +195,7 @@ $(document).ready(function(){
             </p>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+      <a href="{% url '' %}" class="modal-action modal-close waves-effect waves-green btn-flat">Home</a>
     </div>
   </div>
 
