--- a/templates/pricecheck/index.html
+++ b/templates/pricecheck/index.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -182,8 +182,8 @@
     <i class="material-icons right">send</i>
   </button>
   </form>
-
-   <a class="waves-effect waves-light btn" href="{% url 'results' %}"><i class="material-icons left">cloud</i>button</a>
+              <br/>
+   <a class="waves-effect waves-light btn" href="{% url 'results' %}"><i class="material-icons left">cloud</i>Predict</a>
 
 
 
