--- a/templates/pricecheck/results.html
+++ b/templates/pricecheck/results.html
@@ -195,7 +195,7 @@ $(document).ready(function(){
             </p>
     </div>
     <div class="modal-footer">
-      <a href="{% url 'index' %}" class="modal-action modal-close waves-effect waves-green btn-flat">Home</a>
+      <a href="/" class="modal-action modal-close waves-effect waves-green btn-flat">Home</a>
     </div>
   </div>
 
